--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,12 @@
-{# Load the tag library #}
-{% load django_bootstrap5 %}
-
+{% extends "base.html" %}
 {% load i18n %}
 
-
-
-<!DOCTYPE html>
-<html lang="ru-ru">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% translate "Менеджер задач Hexlet" %}</title>
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-  </head>
-  <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ms-3">
-      <a class="navbar-brand" href="/">{% translate "Менеджер задач" %}</a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/users/">{% translate "Пользователи" %}</a>
-          </li>
-          
-        </ul>
-        <ul class="navbar-nav">
-          
-            <li class="nav-item">
-              <a class="nav-link" href="/login/">{% translate "Вход" %}</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/create/">{% translate "Регистрация" %}</a>
-            </li>
-          
-        </ul>
-      </div>
-    </nav>
-    <div class="container wrapper flex-grow-1">
-      
+{% block content %}
+<div class="container wrapper flex-grow-1">    
 
 
       <h1 class="my-4">
-        
-        
+      
       </h1>
       
 <h1 class="my-4"></h1>
@@ -57,11 +19,6 @@
   </div>
 </div>
 
-    </div>
-    <footer>
-      <div class="container my-5 pt-4 border-top">
-        <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
-      </div>
-    </footer>
- </body>
-</html>
+</div>
+{% endblock content %}
+
