--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         <ul class="navbar-nav">
           
             <li class="nav-item">
-              <a class="nav-link" href="/login/">{% translate "Вход" %}</a>
+              <a class="nav-link" href="{% url "login" %}">{% translate "Вход" %}</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/users/create/">{% translate "Регистрация" %}</a>
