--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="{% url "login" %}">{% translate "Вход" %}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/users/create/">{% translate "Регистрация" %}</a>
+              <a class="nav-link" href="{% url "user_create" %}">{% translate "Регистрация" %}</a>
             </li>            
             {% endif %}
 
