--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,18 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url "users" %}">{% translate "Пользователи" %}</a>
           </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="/statuses/">Статусы</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url "statuses" %}">Метки</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/tasks/">Задачи</a>
+            </li>
+          {% endif %}
+
           
         </ul>
         <ul class="navbar-nav">
