CRUD Задач + тесты

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,13 +26,13 @@
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="/statuses/">Статусы</a>
+              <a class="nav-link" href="{% url "statuses" %}">Статусы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url "statuses" %}">Метки</a>
+              <a class="nav-link" href="#">Метки</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/tasks/">Задачи</a>
+              <a class="nav-link" href="{% url "tasks" %}">Задачи</a>
             </li>
           {% endif %}
 
