--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="{% url "statuses" %}">Статусы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Метки</a>
+              <a class="nav-link" href="{% url "labels" %}">Метки</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url "tasks" %}">Задачи</a>
