--- a/task_manager/users/templates/user_create.html
+++ b/task_manager/users/templates/user_create.html
@@ -9,7 +9,7 @@
 <form method="post">
     {% csrf_token %}
 
-    {{form.as_div}}
+    {{form.as_p}}
 
     <input class="btn btn-primary" type="submit" value="Зарегистрировать">  
 
