отрисовка форм с помощтю bootstrap

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -71,6 +71,8 @@
     </div>
       {% endfor %}
     {% endif %}
+    
+    <div class="container wrapper flex-grow-1"> 
     {% block content %}{% endblock content %}
     <footer>
       <div class="container my-5 pt-4 border-top">
