--- a/task_manager/users/templates/login.html
+++ b/task_manager/users/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
 
@@ -13,14 +14,11 @@
         {{form.non_field_errors}}
     </div>
     {% endif %}
-{% comment %} 
-    {{form.as_div}} {% endcomment %}
-    <div class="mb-3"><label class="form-label" for="id_username">Имя пользователя</label>
-    <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="Имя пользователя" required id="id_username"></div>
-    <div class="mb-3"><label class="form-label" for="id_password">Пароль</label>
-    <input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="Пароль" required id="id_password"></div>
-    <input class="btn btn-primary" type="submit" value="Войти">
 
+    {% bootstrap_form form %}
+
+    <input class="btn btn-primary" type="submit" value="Войти">
+    
 </form>      
       
 
