--- a/task_manager/users/templates/user_create.html
+++ b/task_manager/users/templates/user_create.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
 
@@ -6,14 +7,16 @@
       Регистрация
       </h1>
 
-<form method="post">
+    <form method="post">
     {% csrf_token %}
 
-    {{form.as_p}}
+    {% bootstrap_form form %}
+    
 
     <input class="btn btn-primary" type="submit" value="Зарегистрировать">  
 
-</form>    
+    </form> 
+      
       
 
 {% endblock content %}
