--- a/task_manager/users/templates/user_update.html
+++ b/task_manager/users/templates/user_update.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
 
@@ -9,7 +10,7 @@
 <form method="post">
     {% csrf_token %}
 
-    {{form.as_div}}
+    {% bootstrap_form form %}
 
     <input class="btn btn-primary" type="submit" value="Изменить">  
 
