--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -64,14 +64,8 @@
       </div>
     </nav>
 
-    {% if messages %}
-      {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}" role="alert">
-      {{ message }}
-    </div>
-      {% endfor %}
-    {% endif %}
-    
+    {% bootstrap_messages %}
+
     <div class="container wrapper flex-grow-1"> 
     {% block content %}{% endblock content %}
     <footer>
