--- a/task_manager/statuses/templates/statuses_create.html
+++ b/task_manager/statuses/templates/statuses_create.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load django_bootstrap5 %}
 
 {% block content %}
 <div class="container wrapper flex-grow-1">    
@@ -12,7 +13,7 @@
 <form method="post">
     {% csrf_token %}
 
-    {{form.as_div}}
+    {% bootstrap_form form %}
 
     <input class="btn btn-primary" type="submit" value="Создать">  
 
