поправил страницу удаления пользователя для прохождения тестов

--- a/task_manager/users/templates/user_delete.html
+++ b/task_manager/users/templates/user_delete.html
@@ -9,9 +9,9 @@
 <form method="post">
     {% csrf_token %}
 
-    {% comment %} {{form.as_div}} {% endcomment %}
+    <p>Вы уверены, что хотите удалить {{object.username}}?</p>
 
-    <input class="btn btn-primary" type="submit" value="Удалить">  
+    <input class="btn btn-danger" type="submit" value="Да, удалить">  
 
 </form>    
       
