добавлен текст описания в карточку задачи

--- a/task_manager/tasks/templates/tasks_detail.html
+++ b/task_manager/tasks/templates/tasks_detail.html
@@ -14,7 +14,7 @@
     <h2>{{object.name}}</h2>
   </div>
   <div class="card-body bg-light">
-    <p>Описание1;d1</p>
+    <p>{{object.describe}}</p>
     <hr>
     <div class="container">
       <div class="row p-1">
